// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders Divider 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "height": 0.5,
      "marginVertical": 8,
      "opacity": 0.12,
      "width": "100%",
    }
  }
/>
`;

exports[`it renders Divider with marginVertical 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "height": 0.5,
      "marginVertical": 16,
      "opacity": 0.12,
      "width": "100%",
    }
  }
/>
`;
